term_4_utilt/Basics Cmake/Task_1/errors.txt
MacBook-Air-6:bin mac$ cmake ..
-- The C compiler identification is AppleClang 16.0.0.16000026
-- The CXX compiler identification is AppleClang 16.0.0.16000026
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done (0.9s)
-- Generating done (0.0s)
-- Build files have been written to: /Users/mac/CS-2024-2025/0simple_project/bin



MacBook-Air-6:bin mac$ cmake --build .
[ 33%] Building CXX object CMakeFiles/main.dir/main.cpp.o
In file included from /Users/mac/CS-2024-2025/0simple_project/main.cpp:5:
/Users/mac/CS-2024-2025/0simple_project/image.h:56:9: error: function definition does not declare parameters
   56 |     int mWidth  {0};
      |         ^
/Users/mac/CS-2024-2025/0simple_project/image.h:57:9: error: function definition does not declare parameters
   57 |     int mHeight {0};
      |         ^
/Users/mac/CS-2024-2025/0simple_project/image.h:58:32: error: function definition does not declare parameters
   58 |     std::vector<unsigned char> mData {};
      |                                ^
/Users/mac/CS-2024-2025/0simple_project/image.h:78:34: error: use of undeclared identifier 'mWidth'
   78 |     int getWidth() const {return mWidth;}
      |                                  ^
/Users/mac/CS-2024-2025/0simple_project/image.h:79:35: error: use of undeclared identifier 'mHeight'; did you mean 'getHeight'?
   79 |     int getHeight() const {return mHeight;}
      |                                   ^~~~~~~
      |                                   getHeight
/Users/mac/CS-2024-2025/0simple_project/image.h:79:9: note: 'getHeight' declared here
   79 |     int getHeight() const {return mHeight;}
      |         ^
/Users/mac/CS-2024-2025/0simple_project/image.h:79:35: error: reference to non-static member function must be called; did you mean to call it with no arguments?
   79 |     int getHeight() const {return mHeight;}
      |                                   ^~~~~~~
      |                                          ()
/Users/mac/CS-2024-2025/0simple_project/image.h:80:38: error: use of undeclared identifier 'mData'
   80 |     unsigned char* getData() {return mData.data();}
      |                                      ^
/Users/mac/CS-2024-2025/0simple_project/main.cpp:11:34: error: expected expression
   11 |     im.drawCircle(100, 200, 200, {200, 100, 100});
      |                                  ^
/Users/mac/CS-2024-2025/0simple_project/main.cpp:12:37: error: expected expression
   12 |     im.drawLine(100, 100, 200, 300, {255, 255, 0});
      |                                     ^
/Users/mac/CS-2024-2025/0simple_project/main.cpp:13:37: error: expected expression
   13 |     im.drawLine(100, 100, 280, 300, {255, 255, 0});
      |                                     ^
/Users/mac/CS-2024-2025/0simple_project/main.cpp:14:37: error: expected expression
   14 |     im.drawLine(100, 100, 360, 300, {255, 255, 0});
      |              